# codexstockbuild

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  system.py
backend/app/auth/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/database/: __init__.py  session.py
backend/app/market/: __init__.py
backend/app/market/data/: indian_stocks.py
backend/app/market/providers/: base.py  mock.py  yahoo.py
backend/app/market/routers/: market.py
backend/app/market/schemas/: stock.py
backend/app/market/services/: market_service.py
backend/app/models/: __init__.py
backend/app/news/: __init__.py
backend/app/notifications/: __init__.py
backend/app/portfolio/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: system.py
backend/app/services/: __init__.py
backend/app/subscriptions/: __init__.py
backend/tests/: test_system.py
docs/: api-spec.md  architecture.md  coding-standards.md  database.md  roadmap.md  vision.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
frontend/src/api/: client.ts
frontend/src/app/: App.tsx
frontend/src/constants/: branding.ts
frontend/src/contexts/: ThemeProvider.tsx
frontend/src/hooks/: useTheme.ts
infra/: README.md
(+33 files in other folders)
